syntax = "proto3";

option java_multiple_files = true;
package proto;
import "notificationModel.proto";

service NotificationGrpcService{
  rpc add (NewNotificationProto) returns (NotificationResponseProto);
  rpc getNotifications (GetNotificationProto) returns (NotificationsProto);
  rpc changeNotificationsStatus (GetNotificationProto) returns (NotificationResponseProto);
  rpc addPostNotification (NewPostNotificationProto) returns (NotificationResponseProto);
}